fix styling issues

--- a/main/client/less/list-items.less
+++ b/main/client/less/list-items.less
@@ -14,7 +14,7 @@
     cursor: pointer;
   }
   input[type="text"] { flex: 1; }
-  .delete-item { flex: 0, 0, 3rem; }
+  .delete-item { flex: 0 0 3rem; }
 
 
   // Style of list-item children
