--- a/main/client/less/imports/text.import.less
+++ b/main/client/less/imports/text.import.less
@@ -7,6 +7,7 @@
 
 // Adds an ellipses at the end of overflowing strings
 .ellipsized() {
+  overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
