--- a/main/client/less/list-show.less
+++ b/main/client/less/list-show.less
@@ -15,7 +15,8 @@
     @media screen and (min-width: 40em) { text-align: left; }
 
     .title-page {
-      .position(absolute, 1rem, 3rem, auto, 3rem);
+      .position(absolute, 0, 3rem, auto, 3rem);
+      line-height: 3rem;
       @media screen and (min-width: 40em) {
         left: 1rem;
         right: 6rem;
