--- a/imports/ui/components/Loading.less
+++ b/imports/ui/components/Loading.less
@@ -1,4 +1,4 @@
-@import './imports.import.less';
+@import '{}/imports/ui/stylesheets/utils.less';
 
 .loading-app {
   .position(absolute, 50%, 50%, auto, auto, 50%);
