--- a/imports/ui/components/ConnectionNotification.less
+++ b/imports/ui/components/ConnectionNotification.less
@@ -1,4 +1,4 @@
-@import './imports.import.less';
+@import '{}/imports/ui/stylesheets/utils.less';
 
 @-webkit-keyframes spin {
   0% { transform: rotate(0deg); }
