--- a/imports/ui/components/Message.less
+++ b/imports/ui/components/Message.less
@@ -1,4 +1,4 @@
-@import './imports.import.less';
+@import '{}/imports/ui/stylesheets/utils.less';
 
 // Empty states and 404 messages
 .wrapper-message {
