--- a/imports/ui/pages/NotFoundPage.less
+++ b/imports/ui/pages/NotFoundPage.less
@@ -1,4 +1,4 @@
-@import './imports.import.less';
+@import '{}/imports/ui/stylesheets/utils.less';
 
 .page.not-found {
   .content-scrollable { background: @color-tertiary; }
